--- a/starter/package.json
+++ b/starter/package.json
@@ -1,10 +1,16 @@
 {
   "name": "protractor_example",
+  "scripts": {
+    "postinstall": "webdriver-manager update",
+    "test": "./node_modules/.bin/protractor conf.js"
+  },
   "dependencies": {
     "jasmine-spec-reporter": "2.7.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1"
+    "babel-register": "^6.24.1",
+    "protractor": "~5.4.3",
+    "protractor-snapshot": "^1.2.0"
   }
 }
